--- a/stack.docker-compose.yml
+++ b/stack.docker-compose.yml
@@ -1,41 +1,34 @@
-version: '3.8'
+version: '3.9'
 
 services:
   app:
-    image: 'louislam/uptime-kuma:1.21.3-alpine'
-    container_name: uptime-kuma-app
-    #ports:
-    #  - 3001:3001
+    image: louislam/uptime-kuma:1.22.1-alpine
     volumes:
       - $(pwd)/lib_upkdata:/app/data
     networks:
-      - uptime-kuma-net
-      - reverse-proxy
+      - uptimekuma-net
     healthcheck:
-      test: ['CMD', 'node', 'extra/healthcheck.js']
-      interval: 1m30s
-      timeout: 30s
+      test: [ 'CMD', 'node', 'extra/healthcheck.js' ]
+      interval: 30s
+      timeout: 15s
       retries: 3
       start_period: 10s
-
     deploy:
       mode: global
       restart_policy:
         condition: on-failure
-        delay: 10s 
-        max_attempts: 3
-        window: 30s
+        delay: 5s
+        max_attempts: 5
+        window: 10s
+      resources:
+        limits:
+          cpus: '1.5'
+          memory: 256M
 
 networks:
-  uptime-kuma-net:
-    name: 'uptime-kuma-net'
+  uptimekuma-net:
+    name: uptimekuma-net
     ipam:
       driver: default
       config:
-        - subnet: '172.18.0.0/28'
-
-  # Reverse Proxy
-  reverse-proxy:
-    name: 'reverse-proxy'
-    external: true
-
+        - subnet: 172.18.0.0/28
